# modernGPT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
modern_gpt/: __init__.py  agent.py  config.py  data.py  dpo.py  finetune.py  grpo.py  model.py  optim.py  quantize.py  rl_utils.py  sample.py  serve.py  tokenizer.py  train.py
runs/: adamw.json  benchmark.json  dpo.json  muon.json
scripts/: benchmark.py  make_figures.py  prepare_shakespeare.py
tests/: test_model.py  test_posttrain.py
