[project]
name = "modern-gpt"
version = "0.1.0"
description = "A modern decoder-only LLM from scratch, taken through the full lifecycle."
authors = [{ name = "João Cordova" }]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["torch>=2.2", "numpy>=1.24", "tiktoken>=0.5"]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = ["ruff>=0.4", "pytest>=7"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E741", "B008"]

[tool.setuptools.packages.find]
include = ["modern_gpt*"]
